Color map switched to 50x3

--- a/colors_1.html
+++ b/colors_1.html
@@ -3,165 +3,258 @@
     </head>
     <body>
         <table>
+#include <stdint.h>
+ namespace ldata {
+ uint32_t colors[120] = {
 <tr>
-<td class="td" style="background:#105070">&nbsp;</td>
-<td class="td" style="background:#125473">&nbsp;</td>
-<td class="td" style="background:#145876">&nbsp;</td>
-<td class="td" style="background:#165C79">&nbsp;</td>
-<td class="td" style="background:#18607C">&nbsp;</td>
-<td class="td" style="background:#1A647F">&nbsp;</td>
+<td class="td" style="background:#104060">&nbsp;</td>
+<td class="td" style="background:#114362">&nbsp;</td>
+<td class="td" style="background:#124664">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#105085">&nbsp;</td>
-<td class="td" style="background:#125488">&nbsp;</td>
-<td class="td" style="background:#14588B">&nbsp;</td>
-<td class="td" style="background:#165C8E">&nbsp;</td>
-<td class="td" style="background:#186091">&nbsp;</td>
-<td class="td" style="background:#1A6494">&nbsp;</td>
+<td class="td" style="background:#104068">&nbsp;</td>
+<td class="td" style="background:#11436A">&nbsp;</td>
+<td class="td" style="background:#12466C">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#10509A">&nbsp;</td>
-<td class="td" style="background:#12549D">&nbsp;</td>
-<td class="td" style="background:#1458A0">&nbsp;</td>
-<td class="td" style="background:#165CA3">&nbsp;</td>
-<td class="td" style="background:#1860A6">&nbsp;</td>
-<td class="td" style="background:#1A64A9">&nbsp;</td>
+<td class="td" style="background:#104070">&nbsp;</td>
+<td class="td" style="background:#114372">&nbsp;</td>
+<td class="td" style="background:#124674">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#1050AF">&nbsp;</td>
-<td class="td" style="background:#1254B2">&nbsp;</td>
-<td class="td" style="background:#1458B5">&nbsp;</td>
-<td class="td" style="background:#165CB8">&nbsp;</td>
-<td class="td" style="background:#1860BB">&nbsp;</td>
-<td class="td" style="background:#1A64BE">&nbsp;</td>
+<td class="td" style="background:#104078">&nbsp;</td>
+<td class="td" style="background:#11437A">&nbsp;</td>
+<td class="td" style="background:#12467C">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#1050C4">&nbsp;</td>
-<td class="td" style="background:#1254C7">&nbsp;</td>
-<td class="td" style="background:#1458CA">&nbsp;</td>
-<td class="td" style="background:#165CCD">&nbsp;</td>
-<td class="td" style="background:#1860D0">&nbsp;</td>
-<td class="td" style="background:#1A64D3">&nbsp;</td>
+<td class="td" style="background:#104080">&nbsp;</td>
+<td class="td" style="background:#114382">&nbsp;</td>
+<td class="td" style="background:#124684">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#1050D9">&nbsp;</td>
-<td class="td" style="background:#1254DC">&nbsp;</td>
-<td class="td" style="background:#1458DF">&nbsp;</td>
-<td class="td" style="background:#165CE2">&nbsp;</td>
-<td class="td" style="background:#1860E5">&nbsp;</td>
-<td class="td" style="background:#1A64E8">&nbsp;</td>
+<td class="td" style="background:#104088">&nbsp;</td>
+<td class="td" style="background:#11438A">&nbsp;</td>
+<td class="td" style="background:#12468C">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#506010">&nbsp;</td>
-<td class="td" style="background:#546212">&nbsp;</td>
-<td class="td" style="background:#586414">&nbsp;</td>
-<td class="td" style="background:#5C6616">&nbsp;</td>
-<td class="td" style="background:#606818">&nbsp;</td>
-<td class="td" style="background:#646A1A">&nbsp;</td>
+<td class="td" style="background:#104090">&nbsp;</td>
+<td class="td" style="background:#114392">&nbsp;</td>
+<td class="td" style="background:#124694">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#506E10">&nbsp;</td>
-<td class="td" style="background:#547012">&nbsp;</td>
-<td class="td" style="background:#587214">&nbsp;</td>
-<td class="td" style="background:#5C7416">&nbsp;</td>
-<td class="td" style="background:#607618">&nbsp;</td>
-<td class="td" style="background:#64781A">&nbsp;</td>
+<td class="td" style="background:#104098">&nbsp;</td>
+<td class="td" style="background:#11439A">&nbsp;</td>
+<td class="td" style="background:#12469C">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#507C10">&nbsp;</td>
-<td class="td" style="background:#547E12">&nbsp;</td>
-<td class="td" style="background:#588014">&nbsp;</td>
-<td class="td" style="background:#5C8216">&nbsp;</td>
-<td class="td" style="background:#608418">&nbsp;</td>
-<td class="td" style="background:#64861A">&nbsp;</td>
+<td class="td" style="background:#1040A0">&nbsp;</td>
+<td class="td" style="background:#1143A2">&nbsp;</td>
+<td class="td" style="background:#1246A4">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#508A10">&nbsp;</td>
-<td class="td" style="background:#548C12">&nbsp;</td>
-<td class="td" style="background:#588E14">&nbsp;</td>
-<td class="td" style="background:#5C9016">&nbsp;</td>
-<td class="td" style="background:#609218">&nbsp;</td>
-<td class="td" style="background:#64941A">&nbsp;</td>
+<td class="td" style="background:#1040A8">&nbsp;</td>
+<td class="td" style="background:#1143AA">&nbsp;</td>
+<td class="td" style="background:#1246AC">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#509810">&nbsp;</td>
-<td class="td" style="background:#549A12">&nbsp;</td>
-<td class="td" style="background:#589C14">&nbsp;</td>
-<td class="td" style="background:#5C9E16">&nbsp;</td>
-<td class="td" style="background:#60A018">&nbsp;</td>
-<td class="td" style="background:#64A21A">&nbsp;</td>
+<td class="td" style="background:#1040B0">&nbsp;</td>
+<td class="td" style="background:#1143B2">&nbsp;</td>
+<td class="td" style="background:#1246B4">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#50A610">&nbsp;</td>
-<td class="td" style="background:#54A812">&nbsp;</td>
-<td class="td" style="background:#58AA14">&nbsp;</td>
-<td class="td" style="background:#5CAC16">&nbsp;</td>
-<td class="td" style="background:#60AE18">&nbsp;</td>
-<td class="td" style="background:#64B01A">&nbsp;</td>
+<td class="td" style="background:#1040B8">&nbsp;</td>
+<td class="td" style="background:#1143BA">&nbsp;</td>
+<td class="td" style="background:#1246BC">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#50B410">&nbsp;</td>
-<td class="td" style="background:#54B612">&nbsp;</td>
-<td class="td" style="background:#58B814">&nbsp;</td>
-<td class="td" style="background:#5CBA16">&nbsp;</td>
-<td class="td" style="background:#60BC18">&nbsp;</td>
-<td class="td" style="background:#64BE1A">&nbsp;</td>
+<td class="td" style="background:#1040C0">&nbsp;</td>
+<td class="td" style="background:#1143C2">&nbsp;</td>
+<td class="td" style="background:#1246C4">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#50C210">&nbsp;</td>
-<td class="td" style="background:#54C412">&nbsp;</td>
-<td class="td" style="background:#58C614">&nbsp;</td>
-<td class="td" style="background:#5CC816">&nbsp;</td>
-<td class="td" style="background:#60CA18">&nbsp;</td>
-<td class="td" style="background:#64CC1A">&nbsp;</td>
+<td class="td" style="background:#1040C8">&nbsp;</td>
+<td class="td" style="background:#1143CA">&nbsp;</td>
+<td class="td" style="background:#1246CC">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#701050">&nbsp;</td>
-<td class="td" style="background:#731254">&nbsp;</td>
-<td class="td" style="background:#761458">&nbsp;</td>
-<td class="td" style="background:#79165C">&nbsp;</td>
-<td class="td" style="background:#7C1860">&nbsp;</td>
-<td class="td" style="background:#7F1A64">&nbsp;</td>
+<td class="td" style="background:#1040D0">&nbsp;</td>
+<td class="td" style="background:#1143D2">&nbsp;</td>
+<td class="td" style="background:#1246D4">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#851050">&nbsp;</td>
-<td class="td" style="background:#881254">&nbsp;</td>
-<td class="td" style="background:#8B1458">&nbsp;</td>
-<td class="td" style="background:#8E165C">&nbsp;</td>
-<td class="td" style="background:#911860">&nbsp;</td>
-<td class="td" style="background:#941A64">&nbsp;</td>
+<td class="td" style="background:#406010">&nbsp;</td>
+<td class="td" style="background:#436211">&nbsp;</td>
+<td class="td" style="background:#466412">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#9A1050">&nbsp;</td>
-<td class="td" style="background:#9D1254">&nbsp;</td>
-<td class="td" style="background:#A01458">&nbsp;</td>
-<td class="td" style="background:#A3165C">&nbsp;</td>
-<td class="td" style="background:#A61860">&nbsp;</td>
-<td class="td" style="background:#A91A64">&nbsp;</td>
+<td class="td" style="background:#406810">&nbsp;</td>
+<td class="td" style="background:#436A11">&nbsp;</td>
+<td class="td" style="background:#466C12">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#AF1050">&nbsp;</td>
-<td class="td" style="background:#B21254">&nbsp;</td>
-<td class="td" style="background:#B51458">&nbsp;</td>
-<td class="td" style="background:#B8165C">&nbsp;</td>
-<td class="td" style="background:#BB1860">&nbsp;</td>
-<td class="td" style="background:#BE1A64">&nbsp;</td>
+<td class="td" style="background:#407010">&nbsp;</td>
+<td class="td" style="background:#437211">&nbsp;</td>
+<td class="td" style="background:#467412">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#C41050">&nbsp;</td>
-<td class="td" style="background:#C71254">&nbsp;</td>
-<td class="td" style="background:#CA1458">&nbsp;</td>
-<td class="td" style="background:#CD165C">&nbsp;</td>
-<td class="td" style="background:#D01860">&nbsp;</td>
-<td class="td" style="background:#D31A64">&nbsp;</td>
+<td class="td" style="background:#407810">&nbsp;</td>
+<td class="td" style="background:#437A11">&nbsp;</td>
+<td class="td" style="background:#467C12">&nbsp;</td>
 </tr>
 <tr>
-<td class="td" style="background:#D91050">&nbsp;</td>
-<td class="td" style="background:#DC1254">&nbsp;</td>
-<td class="td" style="background:#DF1458">&nbsp;</td>
-<td class="td" style="background:#E2165C">&nbsp;</td>
-<td class="td" style="background:#E51860">&nbsp;</td>
-<td class="td" style="background:#E81A64">&nbsp;</td>
+<td class="td" style="background:#408010">&nbsp;</td>
+<td class="td" style="background:#438211">&nbsp;</td>
+<td class="td" style="background:#468412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#408810">&nbsp;</td>
+<td class="td" style="background:#438A11">&nbsp;</td>
+<td class="td" style="background:#468C12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#409010">&nbsp;</td>
+<td class="td" style="background:#439211">&nbsp;</td>
+<td class="td" style="background:#469412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#409810">&nbsp;</td>
+<td class="td" style="background:#439A11">&nbsp;</td>
+<td class="td" style="background:#469C12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40A010">&nbsp;</td>
+<td class="td" style="background:#43A211">&nbsp;</td>
+<td class="td" style="background:#46A412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40A810">&nbsp;</td>
+<td class="td" style="background:#43AA11">&nbsp;</td>
+<td class="td" style="background:#46AC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40B010">&nbsp;</td>
+<td class="td" style="background:#43B211">&nbsp;</td>
+<td class="td" style="background:#46B412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40B810">&nbsp;</td>
+<td class="td" style="background:#43BA11">&nbsp;</td>
+<td class="td" style="background:#46BC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40C010">&nbsp;</td>
+<td class="td" style="background:#43C211">&nbsp;</td>
+<td class="td" style="background:#46C412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40C810">&nbsp;</td>
+<td class="td" style="background:#43CA11">&nbsp;</td>
+<td class="td" style="background:#46CC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40D010">&nbsp;</td>
+<td class="td" style="background:#43D211">&nbsp;</td>
+<td class="td" style="background:#46D412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40D810">&nbsp;</td>
+<td class="td" style="background:#43DA11">&nbsp;</td>
+<td class="td" style="background:#46DC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40E010">&nbsp;</td>
+<td class="td" style="background:#43E211">&nbsp;</td>
+<td class="td" style="background:#46E412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40E810">&nbsp;</td>
+<td class="td" style="background:#43EA11">&nbsp;</td>
+<td class="td" style="background:#46EC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40F010">&nbsp;</td>
+<td class="td" style="background:#43F211">&nbsp;</td>
+<td class="td" style="background:#46F412">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#40F810">&nbsp;</td>
+<td class="td" style="background:#43FA11">&nbsp;</td>
+<td class="td" style="background:#46FC12">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#601040">&nbsp;</td>
+<td class="td" style="background:#621143">&nbsp;</td>
+<td class="td" style="background:#641246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#681040">&nbsp;</td>
+<td class="td" style="background:#6A1143">&nbsp;</td>
+<td class="td" style="background:#6C1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#701040">&nbsp;</td>
+<td class="td" style="background:#721143">&nbsp;</td>
+<td class="td" style="background:#741246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#781040">&nbsp;</td>
+<td class="td" style="background:#7A1143">&nbsp;</td>
+<td class="td" style="background:#7C1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#801040">&nbsp;</td>
+<td class="td" style="background:#821143">&nbsp;</td>
+<td class="td" style="background:#841246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#881040">&nbsp;</td>
+<td class="td" style="background:#8A1143">&nbsp;</td>
+<td class="td" style="background:#8C1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#901040">&nbsp;</td>
+<td class="td" style="background:#921143">&nbsp;</td>
+<td class="td" style="background:#941246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#981040">&nbsp;</td>
+<td class="td" style="background:#9A1143">&nbsp;</td>
+<td class="td" style="background:#9C1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#A01040">&nbsp;</td>
+<td class="td" style="background:#A21143">&nbsp;</td>
+<td class="td" style="background:#A41246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#A81040">&nbsp;</td>
+<td class="td" style="background:#AA1143">&nbsp;</td>
+<td class="td" style="background:#AC1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#B01040">&nbsp;</td>
+<td class="td" style="background:#B21143">&nbsp;</td>
+<td class="td" style="background:#B41246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#B81040">&nbsp;</td>
+<td class="td" style="background:#BA1143">&nbsp;</td>
+<td class="td" style="background:#BC1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#C01040">&nbsp;</td>
+<td class="td" style="background:#C21143">&nbsp;</td>
+<td class="td" style="background:#C41246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#C81040">&nbsp;</td>
+<td class="td" style="background:#CA1143">&nbsp;</td>
+<td class="td" style="background:#CC1246">&nbsp;</td>
+</tr>
+<tr>
+<td class="td" style="background:#D01040">&nbsp;</td>
+<td class="td" style="background:#D21143">&nbsp;</td>
+<td class="td" style="background:#D41246">&nbsp;</td>
 </tr>
 </table>
      </body>
